# AcesEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.obsidian/: workspace
CMakeConfigFiles/: root_directory.h.in
docs/: _aces_window_8cpp.html  _aces_window_8h.html  _aces_window_8h_source.html  _animation_8cpp.html  _animation_8h.html  _animation_8h_source.html  _card_8cpp.html  _card_8h.html  _card_8h_source.html  _dice_8cpp.html  _dice_8h.html  _dice_8h_source.html  _draggable_8cpp.html  _draggable_8h.html  _draggable_8h_source.html  _drawable_8cpp.html  _drawable_8h.html  _drawable_8h_source.html  _inputable_8cpp.html  _inputable_8h.html  _inputable_8h_source.html  _player_8cpp.html  _player_8h.html  _player_8h_source.html  _profiler_f_p_s_8cpp.html  _profiler_f_p_s_8h.html  _profiler_f_p_s_8h_source.html  _sound_player_8cpp.html  _sound_player_8h.html  _sound_player_8h_source.html  _text_writer_8cpp.html  _text_writer_8h.html  _text_writer_8h_source.html  acesengine_8h.html  acesengine_8h.js  acesengine_8h_source.html  annotated.html  annotated_dup.js  class_aces_window-members.html  class_aces_window.html  (+90 more)
docs/html/: annotated.html  annotated_dup.js  class_aces_window-members.html  class_aces_window.html  class_aces_window.js  class_card-members.html  class_card.html  class_card.js  class_draggable-members.html  class_draggable.html  class_draggable.js  class_drawable-members.html  class_drawable.html  class_drawable.js  class_inputable-members.html  class_inputable.html  class_inputable.js  class_player-members.html  (+17 more)
source/: CMakeLists.txt
source/acesengine/: AcesWindow.cpp  AcesWindow.h  Animation.cpp  Animation.h  CMakeLists.txt  Card.cpp  Card.h  Dice.cpp  Dice.h  Draggable.cpp  Draggable.h  Drawable.cpp  Drawable.h  Inputable.cpp  Inputable.h  Player.cpp  Player.h  ProfilerFPS.cpp  ProfilerFPS.h  SoundPlayer.cpp  SoundPlayer.h  TextWriter.cpp  TextWriter.h  acesengine.h  root_directory.h
source/engine/: AcesWindow.cpp  AcesWindow.h  CMakeLists.txt  CMakeListsTEMP.txt  Card.cpp  Card.h  Draggable.cpp  Draggable.h  Drawable.cpp  Drawable.h  Inputable.cpp  Inputable.h  Player.cpp  Player.h  SoundPlayer.cpp  SoundPlayer.h  TextWriter.cpp  TextWriter.h  changeNameToCMake.txt  futureCmakeList  root_directory.h  shape_maker.cpp
source/engine_ex/: CMakeLists.txt  shape_maker.cpp  snakes_and_ladders_ex.cpp
source/examples_libs/: CMakeLists.txt  ex_sdl2.cpp  ex_sfml_audio.cpp  ex_sfml_graphics.cpp  ex_sfml_window.cpp
(+65 files in other folders)
